<resources>

    <string name="uc_user_center">用户中心</string>
    <string name="sub_user_center">一元提现</string>

    <string name="nav_news">资讯</string>
    <string name="nav_video">视频</string>
    <string name="nav_novel">小说</string>
    <string name="nav_game">游戏</string>
    <string name="nav_wallet">钱包</string>

    <string name="notification_awared">推送点击奖励 +%1$s</string>

    <string name="dialog_back_title">确定退出用户中心</string>
    <string name="dialog_back_define">去看看</string>
    <string name="dialog_back_cancel">狠心放弃</string>
    <string name="dialog_update_title">用户中心 %1$s 新版上线</string>

    <string name="red_dialog_title">恭喜你，获得了红包雨奖励!</string>
    <string name="red_dialog_nexttime">下次红包雨时间：%1$s点</string>
    <string name="red_dialog_red_yd">鱼蛋</string>
    <string name="red_dialog_red_money">价值%1$s元</string>
    <string name="red_dialog_red_btn">我知道了</string>

    <string name="task_award">鱼蛋奖励%1$d</string>
    <string name="task_name">完成任务:%1$s + %2$d</string>

</resources>
