<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tab_news"
        android:enabled="true"
        android:icon="@drawable/selector_news"
        android:title="@string/nav_news" />
    <item
        android:id="@+id/tab_video"
        android:enabled="true"
        android:icon="@drawable/selector_video"
        android:title="@string/nav_video" />

    <item
        android:id="@+id/tab_novel"
        android:enabled="true"
        android:icon="@drawable/selector_novel"
        android:title="@string/nav_novel" />

    <item
        android:id="@+id/tab_game"
        android:enabled="true"
        android:icon="@drawable/selector_game"
        android:title="@string/nav_game" />
    <item
        android:id="@+id/tab_wallet"
        android:enabled="true"
        android:icon="@drawable/selector_wallet"
        android:title="@string/nav_wallet" />
</menu>